rename all the files and folders pertaining to clients/client to hotels/hotel and update the name on the package.json file to the correct project name instead of the default project name adonis had used

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-adonisjs-app",
+  "name": "hms-backoffice-backend-v1",
   "version": "0.0.0",
   "private": true,
   "type": "module",
